--- a/style.css
+++ b/style.css
@@ -2,6 +2,15 @@ body {
   background-color: #0080FF;
   color: white;
   font-family: sans-serif;
+  font-size: 16px;
+}
+
+h1 {
+  font-size: 120%;
+}
+
+h2 {
+  font-size: 110%;
 }
 
 a {
