--- a/style.css
+++ b/style.css
@@ -3,6 +3,8 @@ body {
   color: white;
   font-family: sans-serif;
   font-size: 16px;
+  padding: 0;
+  margin: 0;
 }
 
 h1 {
@@ -23,5 +25,9 @@ a:hover {
 }
 
 div#main {
-  padding: 5px 5px 5px 5px;
+  padding: 5px 10px 5px 10px;
+}
+
+div#main ul {
+  padding-left: 20px;
 }
