--- a/style.css
+++ b/style.css
@@ -1,18 +1,26 @@
 body {
   background-color: #0080FF;
   color: white;
-  font-family: sans-serif;
+  font-family: 'Montserrat', sans-serif;
   font-size: 16px;
+  font-weight: 300;
   padding: 0;
   margin: 0;
 }
 
-h1 {
-  font-size: 120%;
+.container {
+  max-width: 1000px; 
 }
 
-h2 {
-  font-size: 110%;
+#header h1 {
+  font-family: 'Poppins', sans-serif;
+  font-size: 200%;
+}
+
+#header h2 {
+  margin: 0px 0px 20px 0px;
+  font-family: 'Poppins', sans-serif;
+  font-size: 150%;
 }
 
 a {
@@ -22,12 +30,4 @@ a {
 a:hover {
   color: #FA58F4;
   text-decoration: none;
-}
-
-div#main {
-  padding: 5px 10px 5px 10px;
-}
-
-div#main ul {
-  padding-left: 20px;
 }
